[gd_scene load_steps=3 format=3 uid="uid://cvg7sq84n0x02"]

[ext_resource type="PackedScene" uid="uid://ow18e0rccxku" path="res://commons/primitives/line/line.tscn" id="1_line"]
[ext_resource type="Script" uid="uid://fscr1pwp1fcy" path="res://commons/primitives/line/right_triangle_lines.gd" id="2_script"]

[node name="RightTriangleLines" type="Node3D"]
script = ExtResource("2_script")

[node name="Line1" parent="." instance=ExtResource("1_line")]

[node name="Line2" parent="." instance=ExtResource("1_line")]

[node name="Line3" parent="." instance=ExtResource("1_line")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0.5, 1.5, 2.5)
